# BanaRender

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
assets/DragonAttenuation/: README.md
core/: Mesh.cpp  Model.cpp  Model.h  Node.cpp  Primitive.cpp  Primitive.h  Scene.cpp  camera.cpp  camera.h  macro.h  shader.h
include/glad/: glad.c  glad.h
include/stb_image/: stb_image.h
shader/: BaseColor.frag  BaseColor.vert
src/: CMakeLists.txt  glad.c
src/core/: Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.h  Primitive.h  RenderPipeLine.cpp  RenderPipeLine.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  camera.cpp  camera.h  macro.h  shader.cpp  shader.h
